force-app/main/default/objects/Lead/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indication if lead is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>