force-app/main/default/objects/Lead/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <description>Additional Information section to insert anything that has no dedicated field</description>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>