force-app/main/default/objects/Lead/fields/BlockedCountry__c.field-meta.xml
<CustomField>
    <fullName>BlockedCountry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked Country</label>
    <type>Checkbox</type>
</CustomField>