force-app/main/default/objects/Lead/fields/BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>BusinessArea__c</fullName>
    <description>Respective business area of the company</description>
    <label>Business Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>