force-app/main/default/objects/Lead/fields/CurrentDemand__c.field-meta.xml
<CustomField>
    <fullName>CurrentDemand__c</fullName>
    <description>Current demand that lead owner estimates based on conversation with the lead contact</description>
    <label>Current Demand (t /year)</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>