force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department of the associated lead contact</description>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>