force-app/main/default/objects/Lead/fields/ReasonforNotConverting__c.field-meta.xml
<CustomField>
    <fullName>ReasonforNotConverting__c</fullName>
    <label>Reason for Not Converting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Level</fullName>
            </value>
            <value>
                <fullName>Technically not possible</fullName>
            </value>
            <value>
                <fullName>Strategic Reasons</fullName>
            </value>
            <value>
                <fullName>Blocked Country</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>