force-app/main/default/objects/Lead/fields/ResponsibleAgency__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleAgency__c</fullName>
    <label>Responsible Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>