force-app/main/default/objects/Lead/fields/UniqueCustomerID__c.field-meta.xml
<CustomField>
    <fullName>UniqueCustomerID__c</fullName>
    <label>Unique Customer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>