force-app/main/default/objects/Lead/validationRules/LeadStatusOnCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadStatusOnCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISNEW() ,
 NOT(ISPICKVAL( Status ,&apos;New&apos;)),
 $Profile.Name &lt;&gt;&apos;Systemadministrator&apos;,
 NOT( $Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>A lead can only be created in status &quot;New&quot;.</errorMessage>
</ValidationRule>