force-app/main/default/objects/Lead/validationRules/PhoneNumberBeginWithPlusLead.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNumberBeginWithPlusLead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( ISBLANK( Phone ) ),
NOT(REGEX(Phone , &quot;^\\+[1-9][0-9]{7,14}$&quot;)),
NOT($Setup.ByPassLogic__c.ByPassValidation__c))</errorConditionFormula>
    <errorMessage>Please insert a phone number in the format &quot;+49123456789&quot;.</errorMessage>
</ValidationRule>