force-app/main/default/objects/Lead/validationRules/ValidateLeadCountry.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateLeadCountry</fullName>
    <active>true</active>
    <description>Validation on country when lead is created/updated with a blocked country.</description>
    <errorConditionFormula>AND(BlockedCountry__c, NOT( $Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>You cannot create leads from a blocked country.</errorMessage>
</ValidationRule>