force-app/main/default/objects/Lead/validationRules/ValidationOnActiveUncheck.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnActiveUncheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Active__c = False, 
ISPICKVAL(ReasonforNotConverting__c,&quot;&quot;),
NOT( $Setup.ByPassLogic__c.ByPassValidation__c ))</errorConditionFormula>
    <errorMessage>Please specify the &quot;Reason for Not Converting&quot;.</errorMessage>
</ValidationRule>