force-app/main/default/objects/Lead/validationRules/ValidationOnInlineLeadConversion.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnInlineLeadConversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(IsConverted),
ISPICKVAL( Status ,&apos;Converted&apos;),
NOT($Setup.ByPassLogic__c.ByPassValidation__c ) )</errorConditionFormula>
    <errorMessage>Please use the lead path on top of this record to set the lead status to &quot;Converted&quot; and transfer the record to an account, contact and opportunity.</errorMessage>
</ValidationRule>